codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui_app_server__bottom_pane__pending_input_preview__tests__render_one_message.snap
---
source: tui_app_server/src/bottom_pane/pending_input_preview.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 3 },
    content: [
        "• 已排队的后续消息                      ", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " ")]
        "  ↳ Hello, world!                       ",
        "    ⌥ + ↑ 编辑上一条排队消息            ", // hidden by multi-width symbols: [(11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " ")]
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | ITALIC,
        x: 17, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 11, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 17, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 19, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 23, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 25, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
