codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui_app_server__bottom_pane__pending_input_preview__tests__render_one_pending_steer.snap
---
source: tui_app_server/src/bottom_pane/pending_input_preview.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 48, height: 3 },
    content: [
        "• 下次工具调用后将提交的消息（按 esc 可中断并立 ", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " ")]
        "  即发送）                                      ", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
        "  ↳ Please continue.                            ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 29, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 31, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 38, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 42, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 44, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 46, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 3, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 5, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 7, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 9, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
